--- a/project/finalCodingTest/boxOffice/src/style/style.css
+++ b/project/finalCodingTest/boxOffice/src/style/style.css
@@ -316,7 +316,7 @@
   position: relative;
   overflow: hidden;
   width: auto;
-  max-width: 100%;
+  max-width: 98rem;
   padding: 0 2rem 3rem;
   margin: 0 auto;
 }
