--- a/project/finalCodingTest/movieStar/src/style/reset.css
+++ b/project/finalCodingTest/movieStar/src/style/reset.css
@@ -127,6 +127,10 @@ button {
     appearance: none;
 }
 
+img {
+    width: 100%;
+}
+
 .pl-10 {
     padding-left: 1rem;
 }
@@ -134,3 +138,14 @@ button {
 .pr-10 {
     padding-right: 1rem;
 }
+
+.sr-only {
+    border: 0;
+    margin: -1px;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
